Compiler/tests/semantics/fail/numero_linea_correcto_error_while.java
// Ahora se muestra correctamente el numero de linea en los errores de las sentencias while.

class Test {
	static void main()
	{
		while ("will fail") {
		
		}
	}
}